[metadata]
name = ironic-inject-files
summary = File injection deploy step for Ironic
author = Dmitry Tantsur
python-requires = >=3.6

[files]
modules =
    ironic_inject_files

[entry_points]
ironic_python_agent.hardware_managers =
    ironic_inject_files = ironic_inject_files:InjectFilesHardwareManager
